--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=ArduinoPS4
+name=PS4Arduino
 version=1.0.0
 author=Flamethrower
 maintainer=Flamethrower
 sentence=Library to use HID-capable boards as a controller for PS4.
-paragraph=Meant to be used with the ArduinoPS4-AVR core (see library README for instructions)
+paragraph=Meant to be used with the PS4Arduino-AVR core (see library README for instructions)
 category=Device Control
-url=https://github.com/Flamethr0wer/ArduinoPS4
+url=https://github.com/Flamethr0wer/PS4Arduino
 architectures=*
-includes=ArduinoPS4.h
+includes=PS4Arduino.h
